--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.7",
     "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
     "nanoid": "^5.1.6",
