--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.5.4",
     "nodemon": "^3.1.10",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
